[package]
name = "treasury_service"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
lazy_static = "1.4.0"
regex = "1.7.0"
serde = "1.0.152"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls", "sqlite", "offline", "chrono" ] }
thiserror = "1.0.37"

[dev-dependencies]
cucumber = "0.13.0"
async-trait = "0.1.56"
tokio = { version = "1.19.2", features = ["full"] }

[[test]]
name = "main"
harness = false
